# exchange-collection-rust

./: Cargo.toml  README.md
src/coinbase_rest/: Cargo.toml
src/coinbase_rest/src/apis/: accounts_api.rs  addresses_api.rs  configuration.rs  transactions_api.rs  users_api.rs
src/coinbase_rest/src/models/: _accounts__account_id__addresses__address_id__transactions_get_200_response.rs  _accounts__account_id__addresses_get_200_response.rs  _accounts__account_id__addresses_post_201_response.rs  _accounts__account_id__addresses_post_request.rs  _accounts__account_id__put_request.rs  _accounts__account_id__transactions_post_201_response.rs  _accounts__account_id__transactions_post_request.rs  _accounts_get_200_response.rs  _accounts_post_201_response.rs  _accounts_post_request.rs  _user_auth_get_200_response.rs  _user_auth_get_200_response_data.rs  _user_put_request.rs  _users__user_id__get_200_response.rs  account.rs  address.rs  money_hash.rs  transaction.rs  user.rs
src/coinbase_ws/: Cargo.toml
src/coinbase_ws/src/client/: advanced_trade_market.rs  advanced_trade_order.rs  direct_market_procution_api.rs  direct_market_sandbox_api.rs  market_data_production.rs  market_data_sandbox.rs  mod.rs
src/coinbase_ws/src/model/: auction_payload.rs  cancel_reason.rs  candles.rs  channel_enum.rs  channel_or_product_ids.rs  currency_data.rs  done_orders.rs  events.rs  expiring_futures_position.rs  expiry_enum.rs  fcm_balance_summary.rs  future_balance_summary.rs  futures_balance_summary_event.rs  heartbeat_enum.rs  heartbeat_payload.rs  intraday_margin_window_measure.rs  l2_events.rs  l2_updates.rs  limit_order_message.rs  margin_enum.rs  margin_level_enum.rs  market_events.rs  market_order_message.rs  match_maker_message.rs  match_taker_message.rs  mod.rs  network_data.rs  open_order_message.rs  order_enum.rs  (+36 more)
src/hyperliquid_rest/: Cargo.toml
(+1623 files in other folders)
