[package]
name = "exchange-collection-hyperliquid-rest"
version = "1.2.3"
edition = "2021"

[dependencies.reqwest]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.serde_yaml]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tokio-tungstenite]
workspace = true

[dependencies.typed-websocket]
workspace = true

[dependencies.url]
workspace = true
